# prim_wrapper

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: arithmetic_traits.hpp  prim_wrapper.hpp
src/: main.cpp
tests/: asserts.cpp  benchmark.cpp
